--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -1,3 +1,22 @@
+@import "styles/colors";
+
 .Nav {
-  border: 1px solid red;
+  background: $theme-black;
+  color: $theme-white;
+
+  > ol {
+    display: flex;
+    list-style: none;
+
+    $gap-between-items: 20px;
+    gap: $gap-between-items;
+    padding: 10px $gap-between-items;
+
+    > li {
+      > a {
+        color: inherit;
+        text-decoration: none;
+      }
+    }
+  }
 }
