--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -3,3 +3,7 @@ $theme-black: #000000;
 $theme-white: #ffffff;
 $theme-grey: #564d4d;
 $theme-maroon: #831010;
+
+$imdb-yellow: #deb522;
+
+$mui-grey: #383838;
