(style) Adds basic footer styling

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,3 +1,7 @@
+@import "styles/colors";
+
 .Footer {
-  border: 1px solid red;
+  background: $theme-red;
+  color: $theme-white;
+  padding: 10px;
 }
