(style) Add color to alt text as a fallback for unloaded images

--- a/components/SearchResultCard/SearchResultCard.module.scss
+++ b/components/SearchResultCard/SearchResultCard.module.scss
@@ -32,6 +32,8 @@ $border-radius: 4px;
     width: $container-width;
     height: $container-height;
     border-radius: $border-radius;
+    // @IMPORTANT: provides color for alt text in the event images don't load
+    color: $theme-white;
   }
 
   &__details {
