--- a/components/SearchResultCard/SearchResultCard.module.scss
+++ b/components/SearchResultCard/SearchResultCard.module.scss
@@ -45,5 +45,7 @@ $border-radius: 4px;
   &__metaData {
     display: flex;
     gap: 10px;
+    color: $text-color-secondary;
+    font-weight: bold;
   }
 }
