--- a/components/SearchResultCard/SearchResultCard.module.scss
+++ b/components/SearchResultCard/SearchResultCard.module.scss
@@ -13,9 +13,8 @@ $border-radius: 4px;
 
   // BEGIN: show details on hover
   color: transparent;
-  transition: all 0.4s ease-out;
   &:hover {
-    color: $theme-white;
+    color: $text-color-attention;
 
     .SearchResultCard__img {
       opacity: 0.5;
@@ -23,6 +22,10 @@ $border-radius: 4px;
 
     .SearchResultCard__details {
       background: rgba(0, 0, 0, 0.7);
+    }
+
+    .SearchResultCard__metaData {
+      color: $text-color-secondary;
     }
   }
   // BEGIN: show details on hover
@@ -39,13 +42,12 @@ $border-radius: 4px;
     width: $container-width;
     border-radius: $border-radius $border-radius 0 0;
 
-    padding: 0 15px 15px 15px;
+    padding: 15px;
   }
 
   &__metaData {
     display: flex;
     gap: 10px;
-    color: $text-color-secondary;
     font-weight: bold;
   }
 }
