--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -2,7 +2,7 @@
 $theme-red: #db0000;
 $theme-black: #000000;
 $theme-white: #ffffff;
-$theme-grey: #564d4d;
+$theme-grey: #6d6d6d;
 $theme-dark-grey: #444444;
 $theme-maroon: #831010;
 
