--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,7 +1,11 @@
 @import "styles/colors";
+@import "styles/constants";
 
 .Footer {
+  display: flex;
+  align-items: center;
+  height: $footer-height;
   background: $theme-red;
   color: $theme-white;
-  padding: 10px;
+  padding: 10px 20px;
 }
