(style) Add mobile responsiveness

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
 // This file contains custom defaults on top of normalized.scss
 
 * {
-  font-family: "Roboto", sans-serif !important;
+  font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
 
