--- a/components/MediaCard/MediaCard.module.scss
+++ b/components/MediaCard/MediaCard.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   gap: 20px;
   background-color: $mui-grey;
-  color: $theme-white;
 
   &__img {
   }
@@ -56,7 +55,7 @@
     &__imdbLink {
       padding: 2px 8px;
       border-radius: 2px;
-      color: $theme-black !important;
+      color: $theme-black;
       width: max-content;
       margin-left: auto;
 
@@ -65,6 +64,19 @@
       }
 
       background: $imdb-yellow;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .MediaCard {
+    flex-direction: column;
+
+    &__details {
+      width: 100%;
+      > h1 {
+        margin: 0;
+      }
     }
   }
 }
